# Particle-Explosion-System

./: CMakeLists.txt  README.md  gitignore
include/: NGLScene.h  WindowParams.h  mainwindow.h
shaders/: ParticleFragment.glsl  ParticleVertex.glsl
src/: NGLScene.cpp  main.cpp  mainwindow.cpp
ui/: mainwindow.ui
